# tryGame

./: README.md
3d_game/: CMakeLists.txt  main.cpp  world.cpp  world.h
3d_game/import/glad/include/glad/: glad.h
3d_game/import/glad/src/: glad.c
